# SUGAR-StorageTank

./: .gitignore  boot.py  config.json  main.py  mbuild.py  pyproject.toml
public/: cone_index.html  horizontal_ellipse_index.html
src/: storage_tank.py
src/utils/math/: conversion.py
src/utils/math/volumes/: volume.py
src/utils/math/volumes/box/: volume.py
src/utils/math/volumes/cone/: volume.py
src/utils/math/volumes/cylinder/: volume.py
src/utils/math/volumes/generic/: __init__.py  generic.py
src/utils/math/volumes/horizontal_half_ellipse/: volume.py
src/utils/microdot/: __init__.py
src/utils/sensors/: sensor.py  sensors.py
src/utils/sensors/distance/: distance.py  jsnsr04t.py  tr_evo_mini.py
tests/: storage_tank_test.py
tests/volumes/: box_volume_test.py  cone_volume_test.py  cylinder_volume_test.py  horizontal_half_ellipsoid_volume_test.py
