[project]
name = "sugar-storagetank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esptool>=4.8.1",
    "micropython-esp32-stubs>=1.24.1.post2",
    "mpremote>=1.24.1",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.pylance]
# Python version 
# also see config in .vscode/settings.json 

[tool.mypy]
python_version = "3.6"
ignore_missing_imports = false
# search path 
follow_imports = "silent"
show_column_numbers = true
# no_pretty = true


# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
addopts = "-ra -q"
testpaths = [
    "tests"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "click>=8.1.8",
    "micropython-esp32-stubs>=1.24.1.post2",
    "mypy>=1.15.0",
]

